--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "webpack5-basis",
-  "version": "1.0.0",
-  "description": "A basis setup of webpack 5",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack serve --open"
   },
@@ -16,9 +13,23 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "jest": "^28.1.3",
     "lodash": "^4.17.21"
-  }
+  },
+  "name": "leaderboard",
+  "description": "A leaderboard web app made with Javascript",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/limavfabio/Leaderboard.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/limavfabio/Leaderboard/issues"
+  },
+  "homepage": "https://github.com/limavfabio/Leaderboard#readme"
 }
