--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "webpack",
-    "start": "webpack serve --open"
+    "twstart": "tailwindcss -i ./src/style.css -o ./dist/output.css --watch",
+    "start": "webpack serve --mode=development --open",
+    "build": "export NODE_ENV=production && webpack"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
