--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "hint": "^7.1.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.0",
